--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ jobs:
       node_js: lts/*
       script:
         - npm ci
-        - npx expo login -u sonhua456 -p 123456789
+        - npx expo login -u sonhua456@gmail.com -p 123456789
         - npx expo publish --non-interactive
